--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@
 
 [class^="_icon-"]::before,
 [class*=" _icon-"]::before {
-	
+  /* use !important to prevent issues with browser extensions that change fonts */
   font-family: "iconfont" !important;
   speak: never;
   font-style: normal;
@@ -643,6 +643,10 @@ body {
     @media (min-width: 991.98px) and (max-width: 1727px) {
       .items-future__symbol img {
         width: calc(30px + 156 * ((100vw - 320px) / 1407)); } }
+
+@media (max-width: 766.98px) {
+  .pricing__wrapper {
+    background-color: #f2f2f2; } }
 
 .pricing__body {
   min-width: 1458px;
@@ -1325,44 +1329,6 @@ body {
   left: 0;
   width: 100%;
   height: 100%; }
-
-.popup {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.8);
-  z-index: 50;
-  opacity: 0;
-  visibility: hidden; }
-  .popup__body {
-    min-height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    padding: 30px 10px; }
-  .popup__content {
-    background-color: #fff;
-    color: #000;
-    max-width: 600px;
-    padding: 30px;
-    position: relative; }
-  .popup__close {
-    position: absolute;
-    top: 15px;
-    right: 15px;
-    font-size: 20px;
-    color: #000; }
-  .popup__title {
-    font-size: 40px;
-    margin-bottom: 1em; }
 
 /*------------------ Footer ---------------------*/
 .footer__body {
